@@ -63,7 +63,7 @@ import java.io.*;
 
 
 
- * <p>GPTrees can print themselves for humans in one of three ways:
+ * <p>GPTrees can print themselves for humans in one of <b>four</b> styles:
  * <ol><li>A GPTree can print the tree as a Koza-style Lisp s-expression, which is the default.  
  * <li> A GPTree can print itself in pseudo-C format:
  *     <ol><li>Terminals can be printed either as variables "a" or as zero-argument functions "a()"
@@ -71,6 +71,9 @@ import java.io.*;
  *     <li>Two-argument nonterminals can be printed either as operators "b a c" or as functions "a(b, c)"
  *     <li>Nonterminals with more arguments are printed as functions "a(b, c, d, ...)"
  * </ol>
+ * <li>A GPTree can print the tree AT&amp;T's Graphviz format.  You can snip the code out and save 
+ * it as a ".dot" file to render in any Graphviz renderer (for example, use <a href="http://www.pixelglow.com/graphviz/">
+ * this MacOS X front end to the renderer).
  * <li>A GPTree can print the tree as a LaTeX2e code snippet, which can be inserted
  * into a LaTeX2e file and will result in a picture of the tree!  Cool, no?
  * </ol>
@@ -137,12 +140,15 @@ import java.io.*;
  <tr><td valign=top><i>base</i>.<tt>tc</tt><br>
  <font size=-1>String</font></td>
  <td valign=top>(The tree's constraints)</td></tr>
+ <tr><td valign=top><i>base</i>.<tt>graphviz</tt><br>
+ <font size=-1>bool = <tt>true</tt> or <tt>false</tt> (default)</td>
+ <td valign=top>(print for humans using graphviz?)</td></tr>
  <tr><td valign=top><i>base</i>.<tt>latex</tt><br>
  <font size=-1>bool = <tt>true</tt> or <tt>false</tt> (default)</td>
- <td valign=top>(print for humans using latex?)</td></tr>
+ <td valign=top>(print for humans using latex?  Takes precedence over graphviz.)</td></tr>
  <tr><td valign=top><i>base</i>.<tt>c</tt><br>
  <font size=-1>bool = <tt>true</tt> or <tt>false</tt> (default)</td>
- <td valign=top>(print for humans using c?  Takes precedence over latex)</td></tr>
+ <td valign=top>(print for humans using c?  Takes precedence over latex and graphviz.)</td></tr>
  <tr><td valign=top><i>base</i>.<tt>c-operators</tt><br>
  <font size=-1>bool = <tt>true</tt> (default) or <tt>false</tt></td>
  <td valign=top>(when printing using c, print two-argument functions operators "b a c"?  The alternative is functions "a(b, c)."</td></tr>
@@ -162,6 +168,7 @@ public class GPTree implements GPNodeParent, Prototype
     {
     public static final String P_TREE = "tree";
     public static final String P_TREECONSTRAINTS = "tc";
+    public static final String P_USEGRAPHVIZ = "graphviz";
     public static final String P_USELATEX = "latex";
     public static final String P_USEC = "c";
     public static final String P_USEOPS = "c-operators";
@@ -178,13 +185,16 @@ public class GPTree implements GPNodeParent, Prototype
         this variable -- use the constraints() method instead, which will give
         the actual constraints object. */
     public byte constraints;
+
+    /** Use graphviz to print for humans? */
+    public boolean useGraphviz;
     
-    /** Use latex to print for humans? */
+    /** Use latex to print for humans? Takes precedence over graphviz. */
     public boolean useLatex;
 
-    /** Use c to print for humans?  Takes precedence over latex. */
+    /** Use c to print for humans?  Takes precedence over latex and graphviz. */
     public boolean useC;
-
+    
     /** When using c to print for humans, do we print terminals as variables? 
         (as opposed to zero-argument functions)? */
     public boolean printTerminalsAsVariablesInC;
@@ -260,6 +270,9 @@ public class GPTree implements GPNodeParent, Prototype
     public void setup(final EvolutionState state, final Parameter base)
         {
         Parameter def = defaultBase();
+
+	// print for humans using graphviz?
+	useGraphviz = state.parameters.getBoolean(base.push(P_USEGRAPHVIZ), def.push(P_USEGRAPHVIZ), false);
 
         // print for humans using latex?
         useLatex = state.parameters.getBoolean(base.push(P_USELATEX),def.push(P_USELATEX),false);
@@ -380,6 +393,7 @@ public class GPTree implements GPNodeParent, Prototype
         if (useC) state.output.print(child.makeCTree(true, 
                                                      printTerminalsAsVariablesInC, printTwoArgumentNonterminalsAsOperatorsInC),verbosity,log);
         else if (useLatex) state.output.print(child.makeLatexTree(),verbosity,log);
+	else if (useGraphviz) state.output.print(child.makeGraphvizTree(), verbosity, log);
         else child.printRootedTreeForHumans(state,log,verbosity,0,0);
         // printRootedTreeForHumans doesn't print a '\n', so I need to do so here
         state.output.println("",verbosity,log);
